# aisec-check

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: scan.yml
src/aisec_check/: __init__.py  acdiff.py  cli.py  core.py  models.py  rules.py  sarif.py  scanners.py  seal.py
tests/: test_acdiff.py  test_core_seal.py  test_rules.py  test_scanners.py
tests/fixtures/safe/: deser_secrets.py  routes.py  routes_realistic.py  webfetch_exec.py
tests/fixtures/vulnerable/: deser_secrets.py  routes.py  webfetch_exec.py
validation/: README.md  aggregate.py  corpus-scan.yml  corpus.md
